--- a/style.css
+++ b/style.css
@@ -6,12 +6,19 @@
 html {
     width: 100%;
     height:100%;
-    font-size:20px;
+    font-size:16px;
     margin: 0;
     padding: 0;
 }
 
-/*--Début de mon header*/
+body{
+ width: 100%;
+    height:100%;
+    margin: 0;
+    padding: 0;
+}
+
+                                /*--Début de mon header*/
 header{
     margin: none;
     padding: none;
@@ -26,21 +33,39 @@ header{
     margin:0;
     padding: 0;
     width: 100%;
-    height: 35px;
+    height: 30px;
     background-color: #ff8da1;
 }
 
 p{
     margin: auto;
-    padding: 12px;
+    padding: 8px;
     font-family: "Roboto";
     color: white;
     text-align: center;
-    font-size: 0.6rem;
+    font-size: 0.75rem;
     letter-spacing: 0.5px;
 }
 
 span.infoDelivery{
     text-transform: uppercase;
     font-weight: bold;
+    letter-spacing: 1px;
+}
+
+/*--div contenant la barre de recherche/logos + menu*/
+div.secondBanner{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 130px;
+    border: 1px solid black;
+    background-color: #ffffff;
+}
+/*--barre de recherche*/
+
+img[title="searchIcon"]{
+    width: 15px;
+    height: 15px;
+    color: #ff8da1;
 }
