--- a/style.css
+++ b/style.css
@@ -7,21 +7,18 @@ html {
     width: 100%;
     height:100%;
     font-size:16px;
-    margin: 0;
-    padding: 0;
 }
 
 body{
- width: 100%;
+    width: 100%;
     height:100%;
-    margin: 0;
-    padding: 0;
 }
 
-*{
+*, *::before, *::after{ 
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
-
 
 
                                 /*--Début de mon header*/
@@ -182,12 +179,27 @@ a.menu:active, a.menu:focus{
 color: #ff8da1;
 }
 
-#underline-1{
-    margin: 0;
-    margin-left: 350px;
-    width: 150px;
-    height: 2px;
-    background-color: #ff8da1;
-    
+.underline-hover-effect{
+    display: flex;
+    position: relative;
+    padding-bottom: 0.25rem;
+
 }
 
+.underline-hover-effect::before{
+content:"";
+position: absolute;
+/*left:0; /*pour la direction: ça commence à gauche. Autrement, je change est je mets right*/
+right:0;
+bottom:0;
+width: 0; /*pour la voir dans un premier temps, la mettre à 100%, puis ensuite, mettre la valeur à 0*/
+height: 2px;
+background-color:#ff8da1;
+transition: width 0.25s ease-out;
+}
+
+.underline-hover-effect:hover::before{
+width: 100%;
+left: 0;
+right: auto;
+}
