--- a/style.css
+++ b/style.css
@@ -3,15 +3,10 @@
     src: url("Roboto-Regular.ttf");
 }
 
-html {
+html, body {
     width: 100%;
-    height:100%;
+    height: 100%;
     font-size:16px;
-}
-
-body{
-    width: 100%;
-    height:100%;
 }
 
 *, *::before, *::after{ 
@@ -208,12 +203,31 @@ right: auto;
 /*Début de Image Banner*/
 section{ /* à modifier ou alors spécifier quelque part que toutes les sections prochaines devront aussi être flex*/
     display: flex;
-    flex-wrap: nowrap;
     width: 100%;
-    height: 150px;
+    height: 650px;
+    flex-wrap: nowrap;
+    background-image: url("Picture/nuage.jpg");
+    justify-content: center;
 }
 
 img.firstImage{
-    object-fit: stretch;
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: none;
 }
 
+section div {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.secondImage, .newIn, .thirdImage {
+    justify-content: center;
+    flex-flow: row nowrap;
+    align-content: space-around;
+}
+
+.secondImage img, .thirdImage img {
+    width: 300px;
+}
