--- a/style.css
+++ b/style.css
@@ -207,13 +207,16 @@ right: auto;
 
 /*Début de Image Banner*/
 section{ /* à modifier ou alors spécifier quelque part que toutes les sections prochaines devront aussi être flex*/
-    display: flex;
-    flex-wrap: nowrap;
+    display:flex;
+    flex-wrap: wrap;
     width: 100%;
-    height: 150px;
+    height: 650px;
 }
 
 img.firstImage{
-    object-fit: stretch;
+    max-width: 100%;
+    max-width: 100%;
+    object-fit: none;
 }
+
 
