--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     src: url("Roboto-Regular.ttf");
 }
 
+@font-face {
+    font-family: "mission gothic";
+    src: url("Mission\ Gothic\ Black.otf");
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -230,4 +235,47 @@ section div {
 
 .secondImage img, .thirdImage img {
     width: 300px;
+}
+
+
+                                /*-- Début de mon Footer */
+
+footer p {
+    color: black;
+}
+
+/* Première ligne du footer */
+
+.customerService {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.payment, .delivery, .returns, .service {
+    flex-basis: 25%;
+    flex-grow: 0;
+}
+
+.CSTitle {
+    text-transform: uppercase;
+    font-family: "mission gothic";
+    font-size: 1.2rem;
+}
+
+.CSText {
+    font-size: 0.8rem;
+}
+
+.fas {
+    color: #ff7c94;
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+}
+
+/* Deuxième ligne du footer */
+
+.community {
+    background-color: rgb(252, 239, 243);
 }
