--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ right: auto;
 }
 
 
-/*Début de Image Banner*/
+                                /*Début de Image Banner*/
 section{ /* à modifier ou alors spécifier quelque part que toutes les sections prochaines devront aussi être flex*/
     display: flex;
     width: 100%;
@@ -235,6 +235,41 @@ section div {
 
 .secondImage img, .thirdImage img {
     width: 300px;
+}
+                               /*Début de mon pseudo-slider*/
+
+article{
+    display: flex;
+    width: 100%;
+    height: 800px;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    border: solid black 2px;
+}
+
+.titleH2{ /*bénéficit du display flex + propriété de direction de ARTICLE*/
+    height: 45px;
+}
+
+h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.pseudo_slider{ /*bénéficit du display flex + propriété de direction de ARTICLE*/
+    display: flex;
+    flex-flow: row nowrap;
+    height: 500px;
+    width: 100%;
+    border: dotted red 2px;
+}
+
+.slider_images{ /*bénéficit du display flex + propriété de direction de DIV.PSEUDO_SLIDER*/
+    width: 50%;
+    height: 50%;
+}
+.slider_img1, .slider_img2, .slider_img3, .slider_img4 {
+    display: flex;
 }
 
 
