--- a/style.css
+++ b/style.css
@@ -248,29 +248,49 @@ article{
 }
 
 .titleH2{ /*bénéficit du display flex + propriété de direction de ARTICLE*/
-    height: 45px;
+    height: 150px;
+
 }
 
 h2 {
-    margin: 0;
+    margin: 0px;
     padding: 0;
+    margin-top: 50px;
+    font-family: "mission gothic";
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    font-weight: 600;
+    letter-spacing: 0.15rem;
+    text-align: center;
+
 }
 
 .pseudo_slider{ /*bénéficit du display flex + propriété de direction de ARTICLE*/
     display: flex;
     flex-flow: row nowrap;
-    height: 500px;
-    width: 100%;
+    height: 450px;
     border: dotted red 2px;
+    justify-content: space-evenly;
+    padding: 0px 45px 0px;
 }
 
-.slider_images{ /*bénéficit du display flex + propriété de direction de DIV.PSEUDO_SLIDER*/
-    width: 50%;
-    height: 50%;
+.slider_img1, .slider_img2, .slider_img3, .slider_img4 /*bénéficit du display flex + propriété de direction de DIV.PSEUDO_SLIDER*/
+{
+  display: flex; /*toutes les images sont à la même hauteur*/
+  flex-flow: column nowrap; /*pour que les <p> apparaissent en dessous*/
+  width: 300px; /*taille des images*/
+  height: 400px;
 }
-.slider_img1, .slider_img2, .slider_img3, .slider_img4 {
-    display: flex;
+
+.slider_images{ /*bénéficit du display flex + propriété de direction des .slider_img*/
+    ;
 }
+
+.slider_img1 p { /*bénéficit du display flex + propriété de direction des .slider_img*/
+    color: black;
+}
+
+
 
 
                                 /*-- Début de mon Footer */
