work on the .overlay animations

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html, body {
     align-items: baseline;
 }
 
-.sticky{ /*une div pour que mon header et ma nav soit sticky en scrollant*/
+.sticky{ /*une div pour que mon header et ma nav soient sticky en scrollant*/
     margin: 0;
     padding: 0;
     width: 100%;
@@ -285,11 +285,18 @@ h2 {
   flex-flow: column nowrap; /*pour que les <div> apparaissent en dessous*/
   width: 300px; /*taille des images*/
   height: 400px;
+  position: relative; /*position relative pour que ma div.superposition se position en absolue par rapport à cette div relative. Autrement, elle sortirait de son flux.*/
+}
+
+.slider_images{
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
 }
 
 .infoFringues{
     display: flex;
-    flex-flow: row nowrap;/*pour que les <div> apparaissent en en row mais grâce au flex-flow: colum de son parent, reste en dessous de l'image*/
+    flex-flow: row nowrap;/*pour que les <div> apparaissent en row mais grâce au flex-flow: column de son parent, reste en dessous de l'image*/
     justify-content: space-between;
 }
 .infoFringues div { /*bénéficit du display flex + propriété de direction des .slider_img*/
@@ -299,8 +306,24 @@ h2 {
     font-size: 0.85rem;
 }
 
+.overlay {
+    display: flex;
+    background-color: rgba(255,250,250,0.7);/*An RGBA color value is specified with: rgba(red, green, blue, alpha). The alpha parameter is a number between 0.0 (fully transparent) and 1.0 (fully opaque).*/
+    border-top-left-radius: 3px ;
+    border-top-right-radius: 3px ;
+    width: 100%;
+    height: 0;
+    position: absolute; /*check .slider_img1*/
+    z-index: 1;
+    bottom:0; /*si je ne mets pas ça, la transition va commencer en bas et finir en haut*/
+    overflow: hidden;
+    transition: .5s ease-in;
+}
 
-
+.slider_img1:hover .overlay, .slider_img2:hover .overlay, .slider_img3:hover .overlay, .slider_img4:hover .overlay{
+    height: 55px;
+    bottom: 0;
+}
 
                                 /*-- Début de mon Footer */
 
